@@ -38,6 +38,8 @@ Changes in @NEW@:
       InitialContents. (CNY-2578)
     * Explicit calls to r.Requires are now honored in derived recipes.
       (CNY-1760)
+    * The r.addArchive() method can now extract control contents from
+      dpkg .deb archive files. (CNY-2967)
 
   o Client Changes:
     * Shim commitChangeSet() and getFileContents() calls now fall back to
